--- a/requirements.txt
+++ b/requirements.txt
@@ -57,7 +57,7 @@ regex==2021.8.3
 scikit-learn==0.24.2
 scipy==1.7.1
 Send2Trash==1.5.0
-setuptools==52.0.0.post20210125
+setuptools==52.0.0
 six==1.16.0
 sklearn==0.0
 terminado==0.9.4
